--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ background-image: radial-gradient(#374566, #010203);
                 𝔹𝕚𝕣𝕥𝕙𝕕𝕒𝕪 𝕥𝕠 𝕪𝕠𝕦,ℍ𝕒𝕣𝕚𝕤! </p>
 
         </h1>
-        <audio controls src="./Birthday Song for Harish.mp3"></audio>
+        <center><audio controls src="./Birthday Song for Harish.mp3"></audio></center>
         <p><font color="8A2BE2">
          <h1>𝐃𝐨 𝐲𝐨𝐮 𝐫𝐞𝐦𝐞𝐦𝐛𝐞𝐫, 𝐡𝐨𝐰 𝐨𝐥𝐝 𝐲𝐨𝐮 𝐚𝐫𝐞 𝐧𝐨𝐰?</h1>
          </p>
