--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ background-image: radial-gradient(#374566, #010203);
          </p>
 
            <h1>𝐈 𝐬𝐢𝐧𝐜𝐞𝐫𝐞𝐥𝐲 𝐰𝐢𝐬𝐡 𝐲𝐨𝐮 𝐬𝐮𝐜𝐜𝐞𝐬𝐬 𝐚𝐧𝐝 𝐡𝐚𝐩𝐩𝐢𝐧𝐞𝐬𝐬 𝐢𝐧 𝐲𝐨𝐮𝐫 𝐟𝐮𝐭𝐮𝐫𝐞 𝐥𝐢𝐟𝐞.
-             𝐘𝐨𝐮'𝐫𝐞 𝐚 𝐠𝐫𝐞𝐚𝐭 𝐩𝐞𝐫𝐬𝐨𝐧𝐥 🫡
+             𝐘𝐨𝐮'𝐫𝐞 𝐚 𝐠𝐫𝐞𝐚𝐭 𝐩𝐞𝐫𝐬𝐨𝐧 🫡
            <p><font color="00ff00">
             -𝐘𝐨𝐮𝐫 𝐟𝐫𝐢𝐞𝐧𝐝, 𝐙𝐚𝐡𝐢𝐝𝐮𝐥 𝐢𝐬𝐥𝐚𝐦🕴
             </p>
