--- a/index.html
+++ b/index.html
@@ -307,13 +307,15 @@ background-image: radial-gradient(#374566, #010203);
                 𝔹𝕚𝕣𝕥𝕙𝕕𝕒𝕪 𝕥𝕠 𝕪𝕠𝕦,ℍ𝕒𝕣𝕚𝕤! </p>
 
         </h1>
-        <center><audio controls src="./Birthday Song for Harish.mp3"></audio></center>
+        <center><audio controls autoplay loop>
+            <source src="./Birthday Song for Harish.mp3">
+        </audio></center>
         <p><font color="8A2BE2">
          <h1>𝐃𝐨 𝐲𝐨𝐮 𝐫𝐞𝐦𝐞𝐦𝐛𝐞𝐫, 𝐡𝐨𝐰 𝐨𝐥𝐝 𝐲𝐨𝐮 𝐚𝐫𝐞 𝐧𝐨𝐰?</h1>
          </p>
 
            <h1>𝐈 𝐬𝐢𝐧𝐜𝐞𝐫𝐞𝐥𝐲 𝐰𝐢𝐬𝐡 𝐲𝐨𝐮 𝐬𝐮𝐜𝐜𝐞𝐬𝐬 𝐚𝐧𝐝 𝐡𝐚𝐩𝐩𝐢𝐧𝐞𝐬𝐬 𝐢𝐧 𝐲𝐨𝐮𝐫 𝐟𝐮𝐭𝐮𝐫𝐞 𝐥𝐢𝐟𝐞.
-             𝐘𝐨𝐮'𝐫𝐞 𝐚 𝐠𝐫𝐞𝐚𝐭 𝐩𝐞𝐫𝐬𝐨𝐧 🫡
+             𝐘𝐨𝐮'𝐫𝐞 𝐚 𝐠𝐫𝐞𝐚𝐭 𝐩𝐞𝐫𝐬𝐨𝐧 
            <p><font color="00ff00">
             -𝐘𝐨𝐮𝐫 𝐟𝐫𝐢𝐞𝐧𝐝, 𝐙𝐚𝐡𝐢𝐝𝐮𝐥 𝐢𝐬𝐥𝐚𝐦🕴
             </p>
